--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,18 @@
         <servlet-name>deleteNhanVienServlet</servlet-name>
         <servlet-class>controller.deleteNhanVienServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>chucVuDAO</servlet-name>
+        <servlet-class>dal.chucVuDAO</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>chucVuServlet</servlet-name>
+        <servlet-class>controller.chucVuServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>addChucVuServlet</servlet-name>
+        <servlet-class>controller.addChucVuServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,5 +59,17 @@
     <servlet-mapping>
         <servlet-name>deleteNhanVienServlet</servlet-name>
         <url-pattern>/deleteNhanVienServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>chucVuDAO</servlet-name>
+        <url-pattern>/chucVuDAO</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>chucVuServlet</servlet-name>
+        <url-pattern>/chucVu</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>addChucVuServlet</servlet-name>
+        <url-pattern>/addChucVuServlet</url-pattern>
     </servlet-mapping>
 </web-app>
